First installation
------------------

	* Download and unzip Collect.zip
	* Copy collect.db to your device
	* Download and install Collect.apk
	* Start Collect
	* Choose your collect.db file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your collect.db file in the file chooser




Changes
-------

2014-06-06

    * Fixed bug where device in different language then English tried to display validation error
    * Increased padding under title of node description fragments, to fit eventual validation error messages

2014-06-05

	* Handled case where invalid database file was selected