@@ -24,7 +24,6 @@ import org.openforis.idm.model.expression.ExpressionFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.sql.SQLException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
